--- a/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
+++ b/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="murmurhash" Version="1.0.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Exceptions" Version="6.1.0" />
+  </ItemGroup>
+
 </Project>
