--- a/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
+++ b/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="murmurhash" Version="1.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Exceptions" Version="6.1.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
