--- a/src/Byndyusoft.Logging.Sample/Byndyusoft.Logging.Sample.csproj
+++ b/src/Byndyusoft.Logging.Sample/Byndyusoft.Logging.Sample.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Byndyusoft.Logging\Byndyusoft.Logging.csproj" />
+  </ItemGroup>
+
 </Project>
