Сделал JsonLoggingFormatter на замену устаревшему JsonFormatter

--- a/src/Byndyusoft.Logging.Sample/Properties/launchSettings.json
+++ b/src/Byndyusoft.Logging.Sample/Properties/launchSettings.json
@@ -1,26 +1,15 @@
 ﻿{
-  "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
-    "iisExpress": {
-      "applicationUrl": "http://localhost:57245",
-      "sslPort": 0
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
+
     "Byndyusoft.Logging.Sample": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
+      "launchUrl": "api/values",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BUILD_BRANCH": "234-sample-project-logger",
+        "BUILD_COMMIT": "b231ea7"
       }
     }
   }
