--- a/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
+++ b/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
@@ -5,9 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="murmurhash" Version="1.0.3" />
+    <PackageReference Include="OpenTracing" Version="0.12.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
-    <PackageReference Include="Serilog.Exceptions" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
   </ItemGroup>
 
