--- a/src/Byndyusoft.Logging.Sample/Byndyusoft.Logging.Sample.csproj
+++ b/src/Byndyusoft.Logging.Sample/Byndyusoft.Logging.Sample.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jaeger" Version="0.4.3" />
+    <PackageReference Include="OpenTracing.Contrib.NetCore" Version="0.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Byndyusoft.Logging\Byndyusoft.Logging.csproj" />
   </ItemGroup>
 
