Добавил информацию для публикации пакета

--- a/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
+++ b/src/Byndyusoft.Logging/Byndyusoft.Logging.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>Byndyusoft.Logging</PackageId>
+    <RootNamespace>Byndyusoft.Logging</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
