--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,10 @@
 <Project>
   <PropertyGroup>
-    <Version>1.0.0</Version>
+    <Version>1.0.3</Version>
     <RootNamespace>Byndyusoft.Logging</RootNamespace>
     <Authors>Byndyusoft</Authors>
-    <PackageTags>Byndyusoft;Logging</PackageTags>
+    <PackageTags>Byndyusoft;Logging;Serilog</PackageTags>
+	<RepositoryUrl>https://github.com/Byndyusoft/Byndyusoft.Logging</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 </Project>
