--- a/src/Byndyusoft.Logging.Sample/Byndyusoft.Logging.Sample.csproj
+++ b/src/Byndyusoft.Logging.Sample/Byndyusoft.Logging.Sample.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Byndyusoft.Extensions.Logging.OpenTracing\Byndyusoft.Extensions.Logging.OpenTracing.csproj" />
     <ProjectReference Include="..\Byndyusoft.Logging\Byndyusoft.Logging.csproj" />
   </ItemGroup>
 
