--- a/src/Byndyusoft.Logging.OpenTelemetry/Byndyusoft.Logging.OpenTelemetry.csproj
+++ b/src/Byndyusoft.Logging.OpenTelemetry/Byndyusoft.Logging.OpenTelemetry.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>Byndyusoft.Logging.OpenTelemetry</PackageId>
+    <RootNamespace>Byndyusoft.Logging</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
