--- a/src/Byndyusoft.Logging.OpenTracing/Byndyusoft.Logging.OpenTracing.csproj
+++ b/src/Byndyusoft.Logging.OpenTracing/Byndyusoft.Logging.OpenTracing.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>Byndyusoft.Extensions.Logging.OpenTracing</PackageId>
+    <PackageId>Byndyusoft.Logging.OpenTracing</PackageId>
     <RootNamespace>Byndyusoft.Logging</RootNamespace>
   </PropertyGroup>
 
