--- a/src/Byndyusoft.Logging.OpenTelemetry/Byndyusoft.Logging.OpenTelemetry.csproj
+++ b/src/Byndyusoft.Logging.OpenTelemetry/Byndyusoft.Logging.OpenTelemetry.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Byndyusoft.Logging</RootNamespace>
     <PackageTags>Byndyusoft;Logging;Serilog;OpenTelemetry</PackageTags>
     <Description>OpenTelemetry support for Byndyusoft.Logging library</Description>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
