--- a/src/Byndyusoft.Logging.OpenTelemetry/Byndyusoft.Logging.OpenTelemetry.csproj
+++ b/src/Byndyusoft.Logging.OpenTelemetry/Byndyusoft.Logging.OpenTelemetry.csproj
@@ -10,11 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTelemetry.Api" Version="1.3.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Byndyusoft.Logging.OpenTelemetry.Abstractions\Byndyusoft.Logging.OpenTelemetry.Abstractions.csproj" />
-    <ProjectReference Include="..\Byndyusoft.Logging\Byndyusoft.Logging.csproj" />
   </ItemGroup>
 
 </Project>
